<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>MINERful</groupId>
	<artifactId>MINERful</artifactId>
	<version>0.0.1</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<finalName>MINERful</finalName>
		<testSourceDirectory>src/test/java</testSourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>2.4.1</version>
				<configuration>
					<includeSystemScope>true</includeSystemScope>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.1</version>

				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>

				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>

			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.21.0</version>
				<dependencies>
					<dependency>
						<groupId>org.junit.platform</groupId>
						<artifactId>junit-platform-surefire-provider</artifactId>
						<version>1.2.0-M1</version>
					</dependency>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter</artifactId>
						<version>5.6.2</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub OWNER Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/cdc08x/MINERful</url>
		</repository>
	</distributionManagement>
	<dependencies>
		<dependency>
			<groupId>org.deckfour</groupId>
			<artifactId>xes</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.google</groupId>
			<artifactId>gson</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.google</groupId>
			<artifactId>common</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.processmining.plugins</groupId>
			<artifactId>declareminer</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.paukov</groupId>
			<artifactId>combinatorics</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.jgraph</groupId>
			<artifactId>layout</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>nl.flotsam</groupId>
			<artifactId>xeger</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks</groupId>
			<artifactId>xstream</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>javassist.convert</groupId>
			<artifactId>convert</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.deckfour</groupId>
			<artifactId>spex</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.processmining.framework</groupId>
			<artifactId>util</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>com.fluxicon</groupId>
			<artifactId>slickerbox</artifactId>
			<version>1.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.1</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.2</version>
		</dependency>
		<dependency>
			<groupId>dk.brics</groupId>
			<artifactId>automaton</artifactId>
			<version>1.12-1</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.6.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>2.3.4.RELEASE</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>
</project>